@@ -39,9 +39,7 @@
         {br}
 	</div>
 	<h1>
-        {if !empty($config->enable_ical)}
-			<a class="icallink module-actions" href="{link action=ical}" title="{'iCalendar Feed'|gettext}" alt="{'iCalendar Feed'|gettext}"></a>
-		{/if}
+        {ical_link}
         {if $moduletitle && !$config->hidemoduletitle}{$moduletitle}{/if}
 	</h1>
     {if $config->moduledescription != ""}
