@@ -20,9 +20,7 @@
 <div class="module calendar cal-admin">  
 	<a href="{link _common=1 view=Default action=show_view}">Month View</a>{br}
 	<h1>
-        {if !empty($config->enable_ical)}
-            <a class="icallink module-actions" href="{link action=ical}" title="{'iCalendar Feed'|gettext}" alt="{'iCalendar Feed'|gettext}">&#160;</a>
-        {/if}
+        {ical_link}
         {if $moduletitle && !$config->hidemoduletitle}{$moduletitle}{/if}
 	</h1>
     {if $config->moduledescription != ""}
