@@ -29,9 +29,7 @@
         {br}
 	</div>
 	<h2>
-		{if !empty($config->enable_ical)}
-			<a class="icallink" href="{link action=ical date_id=$item->eventdate->id}" title="{'Export this Event as iCalendar file'|gettext}" alt="{'Export this Event as iCalendar file'|gettext}"> </a>
-		{/if}
+        {ical_link}
 		{$item->title}
 	</h2>
 	{permissions}
