@@ -32,9 +32,7 @@
         {export_pdf_link prepend='&#160;&#160;|&#160;&#160;'}
 	</div>
 	<h1>
-        {if !empty($config->enable_ical)}
-			<a class="icallink module-actions" href="{link action=ical}" title="{'iCalendar Feed'|gettext}" alt="{'iCalendar Feed'|gettext}"> </a>
-		{/if}
+        {ical_link}
         {if $moduletitle && !$config->hidemoduletitle}{$moduletitle}{/if}
 	</h1>
     {if $config->moduledescription != ""}
